--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 
       <div class="tab tab-number">.</div>
       <div class="tab tab-del">del</div>
-      <div class="tab tab-save">
-        <button class="btn btn_save">Save</button>
+      <div class="tab tab-save btn_save">Save
+        <!-- <button class="btn btn_save">Save</button> -->
       </div>
       <div class="tab"></div>
     </div>
