--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
     <div class="inputBox">
-      <input type="text" class="input_title" id="inputTitle" placeholder="Title">
+      <input type="text" class="input_title" id="inputTitle" placeholder="Add title...">
       <!-- <label for="inputTitle">Title</label> -->
     </div>
 
@@ -81,7 +81,7 @@
 
       <div class="tab tab-number">.</div>
       <div class="tab tab-del">del</div>
-      <div class="tab tab-save btn_save">Save
+      <div class="tab tab-save btn_save">- Save -
         <!-- <button class="btn btn_save">Save</button> -->
       </div>
       <div class="tab"></div>
