--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <!-- -------- КОНТЕЙНЕР СПИСКА ВСЕХ СОБЫТИЙ --------  -->
   <div class="container-allList">
 
+    <!-- Переход на калькулятор -->
+    <button class='btnNewCalc'>New Calc!</button>
+
   </div>
 
 
@@ -114,6 +117,10 @@
     </div>
 
 
+    <!-- Переход на калькулятор -->
+    <button class='btnStartpage'>Main Page!</button>
+
+
     <!-- Дальше JS втавляет код после клика по кнопке Save в калькуляторе -->
     <!-- EventListener -> btnSave... -->
 
@@ -127,6 +134,9 @@
         </li>
         </ul>
     </div> -->
+
+    <input type="text" class='newItemName' placeholder="New Item Name">
+    <button class='saveNewItemName'>Save New Item Name</button>
 
   </div>
 
